# Individual_Project

./: Project.py  pyproject.toml  query.sparql  tes_file.ttl  tes_tes_file.ttl  tes_tes_file_no_next_niteraction.ttl  test_project.py
